--- a/style.css
+++ b/style.css
@@ -51,3 +51,10 @@ body {
     background-color: purple;
     color: white;
 }
+footer {
+    margin-top: 30px;
+    padding: 10px 10px;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
